# cmake-troubleshooting-example

./: CMakeLists.txt
.github/workflows/: ci.yml
myawesomelib/: CMakeLists.txt
myawesomelib/include/myawesomelib/: counter.h
myawesomelib/src/: counter.cpp
